--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
     "mongoose": "^8.12.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
